Tentativa de correção de bug

--- a/landscapes/index.html
+++ b/landscapes/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria de Artes</title>
-    <link rel="shortcut icon" href="assets/fav.png" type="image/png">
+    <link rel="shortcut icon" href="imagens/fav.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,10 +24,10 @@
     <main>
         <section class="gallery" id="fotos">
             <div class="image-container">
-                <img src="assets/our.cinematic-20250331-0005.jpg" alt="Paisagem 1">
-                <img src="assets/our.cinematic-20250331-0006.jpg" alt="Paisagem 2">
-                <img src="assets/ptcm_photography-20250331-0001.jpg" alt="Paisagem 3">
-                <img src="assets/raylivez-20250331-0001.jpg" alt="Paisagem 4">
+                <img src="imagens/our.cinematic-20250331-0005.jpg" alt="Paisagem 1">
+                <img src="imagens/our.cinematic-20250331-0006.jpg" alt="Paisagem 2">
+                <img src="imagens/ptcm_photography-20250331-0001.jpg" alt="Paisagem 3">
+                <img src="imagens/raylivez-20250331-0001.jpg" alt="Paisagem 4">
             </div>
         </section>
     </main>
