--- a/landscapes/fotos.html
+++ b/landscapes/fotos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria de Artes</title>
+    <link rel="icon" href="https://img.freepik.com/vetores-premium/destaque-se-com-estilo-criando-logotipos-unicos-que-definem-e-elevam-a-identidade-da-sua-marca_579306-22676.jpg?semt=ais_hybrid&w=740" type="image/png">
     <link rel="stylesheet" href="style.css"> 
     <style>
         /* Ajustes específicos para esta página */
