--- a/fotos.html
+++ b/fotos.html
@@ -9,19 +9,46 @@
     <style>
         /* Ajustes específicos para esta página */
         .gallery {
-            grid-template-columns: repeat(5, 1fr) !important;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 15px;
         }
         .gallery-item img {
+            width: 100%;
             height: 300px;
+            object-fit: cover;
+            object-position: center;
+            transition: transform 0.3s ease;
         }
+        .gallery-item:hover img {
+            transform: scale(1.03);
+        }
+        
+        /* Responsividade melhorada */
         @media (max-width: 1200px) {
             .gallery { grid-template-columns: repeat(3, 1fr); }
+            .gallery-item img { height: 250px; }
         }
         @media (max-width: 768px) {
             .gallery { grid-template-columns: repeat(2, 1fr); }
+            .gallery-item img { height: 220px; }
         }
         @media (max-width: 480px) {
-            .gallery { grid-template-columns: 1fr; }
+            .gallery { 
+                grid-template-columns: 1fr;
+                gap: 20px;
+                padding: 15px;
+            }
+            .gallery-item img {
+                height: auto;
+                max-height: 70vh;
+                min-height: 250px;
+                object-fit: contain;
+                background: #f5f5f5;
+            }
+            .gallery-item p {
+                font-size: 1.1rem;
+                padding: 12px 0;
+            }
         }
     </style>
 </head>
